[package]
name = "wasm-demo-32"
version = "0.1.0"
authors = ["ttang"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.126", features = ["derive"] } 
wasi-binio-wasm = "0.1.1"

[dev-dependencies]
anyhow = "1.0.40"
wasmer = "2.0.0-rc1"
wasmer-compiler-cranelift = "2.0.0-rc1"
wasmer-engine-universal = "2.0.0-rc1"
